@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2019 - 2020 https://github.com/TheVice/
+ * Copyright (c) 2019 - 2021 https://github.com/TheVice/
  *
  */
 
@@ -113,18 +113,13 @@ uint8_t target_print_description(void* the_project, struct target* the_target,
 			return 0;
 		}
 
-		if (!echo(0, UTF8, NULL, Info, buffer_data(target_description, 0),
-				  buffer_size(target_description), 1, verbose))
-		{
-			return 0;
-		}
-
-		return 1;
+		return echo(0, UTF8, NULL, Info, buffer_data(target_description, 0),
+					buffer_size(target_description), 1, verbose);
 	}
 
 	if (range_in_parts_is_null_or_empty(attributes_finish, element_finish))
 	{
-		return 1;
+		return echo(0, Default, NULL, Info, (const uint8_t*)"\n", 1, 0, verbose);
 	}
 
 	if (!range_from_string((const uint8_t*)"description\0", 12, 1, target_description) ||
@@ -135,7 +130,7 @@ uint8_t target_print_description(void* the_project, struct target* the_target,
 
 	if (!xml_get_sub_nodes_elements(attributes_finish, element_finish, target_description, &(the_target->tasks)))
 	{
-		return 1;
+		return echo(0, Default, NULL, Info, (const uint8_t*)"\n", 1, 0, verbose);
 	}
 
 	if (!echo(0, Default, NULL, Info, (const uint8_t*)"\t", 1, 0, verbose))
