@@ -5,6 +5,8 @@ ant4c (YYYY.MM)
     of data while calculating hash sum of first one.
   * Added 'operating-system::is-windows-server' and
     'platform::is-windows-server' functions.
+  * Added new line after target name while print project help for
+    target that do not have 'description'.
   * WIN32: fixed using at 'echo' task for scenario when output stream
     redirected to the file by capability of operation system -
     for example: 'ant4c.exe > 1.txt'.
